Spring7 modernize (#536)
Co-authored-by: Alessio Fabiani <alessio.fabiani@geosolutionsgroup.com>
Co-authored-by: Claude Opus 4.7 (1M context) <noreply@anthropic.com>